# rust_practice

./: Cargo.toml  README.md
aw_test/: Cargo.toml
aw_test/src/: download_file.rs  main.rs
aw_test/src/comm_base/: mod.rs  result_code.rs  result_vo.rs
aw_test/src/entity/: mod.rs  prelude.rs  t_material_object.rs
cross_platform_lib/: Cargo.toml  build.rs  readme.md
cross_platform_lib/src/: lib.rs
cross_platform_lib_by_ffi/: Cargo.toml
cross_platform_lib_by_ffi/src/: lib.rs
cross_platform_lib_ffi/: Cargo.toml  bindings.h  readme.md
cross_platform_lib_ffi/src/: lib.rs
cross_platform_lib_jni/: Cargo.toml  readme.md
cross_platform_lib_jni/src/: lib.rs
cross_rust_wasm/: Cargo.toml  README.md
cross_rust_wasm/src/: lib.rs
rust_wasm/: Cargo.toml
rust_wasm/src/: lib.rs
rust_wasm_test/: Cargo.toml  LICENSE_MIT  README.md
test_bin/: Cargo.toml
test_bin/src/: main.rs
test_lib/src/: lib.rs  ownership.rs  shadowing.rs
