[package]
name = "aw_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
log = "0.4"
futures = "0.3"
reqwest = { version = "0.11.11", features = ["stream"] }
futures-util = "0.3"
indicatif = "0.17.0"
config = "^0.13.1"
dotenv = "^0.15.0"
ulid = "^1.0.0"

utoipa = { version = "1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "1", features = ["actix-web"] }

[dependencies.sea-orm]
version = "^0.9.2" # sea-orm version
features = [
    "debug-print",
    "runtime-actix-native-tls",
    "sqlx-postgres",
]
