[package]
name = "cross_platform_lib_by_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cross_platform_lib_by_ffi"
#cdylib rust 向其他语言提供c-abi
crate-type = ["cdylib","staticlib"]
[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}

